WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221827
[LFC][IFC] Multiline inline boxes have incorrect content box height/width values
https://bugs.webkit.org/show_bug.cgi?id=221827
Summary
[LFC][IFC] Multiline inline boxes have incorrect content box height/width values
alan
Reported
2021-02-12 10:24:19 PST
see
bug 221739
Attachments
Patch
(2.84 KB, patch)
2021-02-12 10:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-02-12 10:51:43 PST
Created
attachment 420148
[details]
Patch
EWS
Comment 2
2021-02-12 13:53:45 PST
Committed
r272809
: <
https://commits.webkit.org/r272809
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420148
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-12 13:54:14 PST
<
rdar://problem/74290891
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug