[LFC][IFC] Multiline inline boxes have incorrect content box height/width values https://bugs.webkit.org/show_bug.cgi?id=221827

Reviewed by Antti Koivisto.

Exclude padding and borders when computing the content box size for a multiline inline box.
(This is similar to r272724 but with inline boxes spanning multiple lines.)

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):


Canonical link: https://commits.webkit.org/234045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272809 268f45cc-cd09-0410-ab3c-d52691b4dbfc